src/test/ui/enum/enum-as-repr-manual-impl.stderr
error[E0119]: conflicting implementations of trait `std::enums::AsRepr` for type `HasExplicitRepr`
  --> $DIR/enum-as-repr-manual-impl.rs:15:1
   |
LL | impl AsRepr for HasExplicitRepr {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> AsRepr for T
             where T: HasAsReprImpl;

error[E0788]: explicit impls for the `AsRepr` trait are not permitted
  --> $DIR/enum-as-repr-manual-impl.rs:15:1
   |
LL | impl AsRepr for HasExplicitRepr {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `AsRepr` not allowed, it is automatically implemented for C-like enum types with explicit numeric reprs

error[E0788]: explicit impls for the `AsRepr` trait are not permitted
  --> $DIR/enum-as-repr-manual-impl.rs:30:1
   |
LL | impl AsRepr for HasNoExplicitRepr {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `AsRepr` not allowed, it is automatically implemented for C-like enum types with explicit numeric reprs

error[E0788]: explicit impls for the `HasAsReprImpl` trait are not permitted
  --> $DIR/enum-as-repr-manual-impl.rs:44:1
   |
LL | impl HasAsReprImpl for IndirectEnum {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `HasAsReprImpl` not allowed, it is automatically implemented for C-like enum types with explicit numeric reprs

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0119, E0788.
For more information about an error, try `rustc --explain E0119`.
